objects/ccrz__E_Subscription__c.object
<CustomObject>
    <description>This is a subscription, the record of purchased subscription</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CC_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_s_Phone__c</fullName>
        <formula>ccrz__CCOrder__r.ccrz__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Invoice_Due_Date__c</fullName>
        <formula>Latest_Invoice__r.ccrz__DateDue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Invoice_Generation_Date__c</fullName>
        <formula>Latest_Invoice__r.ccrz__DateIssued__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Invoice Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_SPT_Billing_Frequency__c</fullName>
        <formula>ccrz__SPT__r.Billing_Display_Name__c</formula>
        <label>Current SPT Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SPT_Susbcription_Length__c</fullName>
        <formula>ccrz__SPT__r.ccrz__DisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SPT Susbcription Length</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>ccrz__CCOrderItem__r.Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsIAMDataUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsIAMDataUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Renewal_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox would be checked it subscription is generated for renewal</description>
        <label>Is Renewal Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Installment_Generated__c</fullName>
        <formula>ccrz__InstallmentCountRemaining__c = 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Installment Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Installment_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Installment Paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will always contain the latest invoice associated to the subscription.Whenever Invoice is generated this will be updated.</description>
        <label>Latest Invoice</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CC_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Dn_Price__c</fullName>
        <description>Holding Monthly Distributor Price</description>
        <label>Monthly Dn Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Price__c</fullName>
        <label>Monthly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Invoice_Generation_Date__c</fullName>
        <description>This is the date on which next invoice will be generated.This shall be updated whenever Invoice is generated.FOr the last Invoice , this will be null</description>
        <inlineHelpText>This is the date on which next invoice will be generated.This shall be updated whenever Invoice is generated.FOr the last Invoice , this will be null</inlineHelpText>
        <label>Next Invoice Generation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Non_One_Time_Non_Cancelled_Order__c</fullName>
        <label>Non One Time Non Cancelled Order</label>
        <summaryFilterItems>
            <field>OSM_Order_Subscription__c.Billing_Frequency__c</field>
            <operation>notContain</operation>
            <value>One Time</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Subscription__c.CCQuantity__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Subscription__c.OSM_CCSubscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_Billing_Frequency__c</fullName>
        <formula>ccrz__SPT__r.Billing_Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSM Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Days_Between_2_Cong_Installment_Date__c</fullName>
        <formula>Subsequent_Next_Invoice_Due_Dt__c - ccrz__InstallmentNextDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSM Days Between 2 Cong Installment Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_Display_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSM Display Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Subscriptions (OSM Display Product)</relationshipLabel>
        <relationshipName>CC_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSM_Free_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Parent_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSM Parent Subscription</label>
        <referenceTo>ccrz__E_Subscription__c</referenceTo>
        <relationshipLabel>CC Subscriptions (OSM Parent Subscription)</relationshipLabel>
        <relationshipName>OSM_Parent_Subscription</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSM_Product_SKU__c</fullName>
        <formula>ccrz__CCOrderItem__r.ccrz__Product__r.ccrz__SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSM Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Days_To_Create__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Create</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Free_Trial_Extended_Count__c</fullName>
        <label>Free Trial Extended Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Free_Trial_ModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Free Trial ModifiedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_without_Coterm__c</fullName>
        <formula>ccrz__CCOrderItem__r.OSM_SW_Is_without_Coterm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is without Coterm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Product_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Link</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Subscriptions (Product Link)</relationshipLabel>
        <relationshipName>CC_Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSM_Subscription_Cancellation_Date__c</fullName>
        <label>OSM Subscription Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OSM_Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSM_Subscription_Length__c</fullName>
        <formula>OSM_Subscription_End_Date__c  -  ccrz__SubscriptionStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSM Subscription Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneTimePerDayPrice__c</fullName>
        <description>when subscription get created it will be updated with Per day price for One day for further prorating one time</description>
        <label>OneTimePerDayPrice</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneTime_Dn_Price__c</fullName>
        <description>Holding One Time Distributor price for Product</description>
        <label>OneTime Dn Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OneTime_Price__c</fullName>
        <description>Will holds only onetime price</description>
        <label>OneTime Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderItemQuantity__c</fullName>
        <formula>ccrz__CCOrderItem__r.ccrz__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Item Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PerDayDnPrice__c</fullName>
        <label>PerDayDnPrice</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>This field is used only for manual testing for Prorated price.</description>
        <inlineHelpText>This field is used only for manual testing for Prorated price.</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarterly_Dn_Price__c</fullName>
        <label>Quarterly Dn Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarterly_Price__c</fullName>
        <label>Quarterly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Invoice_Start_Date__c</fullName>
        <description>This field will be used to get exact date from then recurring invoice start.</description>
        <label>Recurring Invoice Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewed_From_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From Subscription</label>
        <referenceTo>ccrz__E_Subscription__c</referenceTo>
        <relationshipLabel>CC Subscriptions (Renewed From Subscription)</relationshipLabel>
        <relationshipName>CC_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <formula>ccrz__CCOrderItem__r.ccrz__SubAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subcription_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subcription Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Cancellation_Requested_Date__c</fullName>
        <label>Subscription Cancellation Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subsequent_Next_Invoice_Due_Dt__c</fullName>
        <inlineHelpText>This is the second invoice due date from today</inlineHelpText>
        <label>Subsequent Next Invoice Due Dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subsequent_Next_Invoice_Generation_Dt__c</fullName>
        <inlineHelpText>This is the second invoice generation date from today</inlineHelpText>
        <label>Subsequent Next Invoice Generation Dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sum_Of_One_Time_Non_Cancelled__c</fullName>
        <label>One Time Non Cancelled Order</label>
        <summaryFilterItems>
            <field>OSM_Order_Subscription__c.Billing_Frequency__c</field>
            <operation>contains</operation>
            <value>One Time</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Subscription__c.CCQuantity__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Subscription__c.OSM_CCSubscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TOBE_HARDDELETED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TOBE_HARDDELETED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yearly_Dn_Price__c</fullName>
        <label>Yearly Dn Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Price__c</fullName>
        <label>Yearly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account associated with this subscription.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this subscription automatically renews</description>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to original order item used to create this subscription.</description>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to original order used to create this subscription.</description>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>Any comments to note about this subscription</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CurrencyISOCode__c</fullName>
        <description>The B2B Commerce currency for this transaction.</description>
        <label>Currency ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveAccountID__c</fullName>
        <description>Holds the effective account for this Subscription. This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own. The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</description>
        <inlineHelpText>This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own. The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</inlineHelpText>
        <label>Effective Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__IgnoreInstallmentFrequencyFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>Ignore Installment Frequency Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Contact Address object that contains the billing address data. This will be a unique copy of the address information captured when the subscription is checked out.</description>
        <label>Installment Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Subscriptions (Installment Address)</relationshipLabel>
        <relationshipName>CCInstallmentSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentCountRemaining__c</fullName>
        <description>The number of installments left in this subscription.  0 indicates no more installments left.  Null indicates this is not an installment based subscription.</description>
        <label>Installment Count Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentLastDate__c</fullName>
        <description>Last date that payment will be billed for this subscription</description>
        <label>Installment Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentNextDate__c</fullName>
        <description>The date the next time payment will be processed for this subscription</description>
        <label>Installment Next Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentStatus__c</fullName>
        <description>Not currently used</description>
        <label>Installment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LastRecurringFailure__c</fullName>
        <description>Indicates a message why the last recurring process for this subscription failed.</description>
        <label>Last Recurring Failure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Contact Address object that contains subscription shipping address data. This will be a unique copy of the address information captured during checkout.</description>
        <label>Order Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Subscriptions (Order Address)</relationshipLabel>
        <relationshipName>CCOrderSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderCountRemaining__c</fullName>
        <description>The number of orders left in this subscription.  0 indicates no more orders left.  Null indicates this is not an order based subscription.</description>
        <label>Order Count Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderLastDate__c</fullName>
        <description>The date of the last order for this subscription</description>
        <label>Order Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderNextDate__c</fullName>
        <description>The date of the next order for this subscription</description>
        <label>Order Next Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderStatus__c</fullName>
        <description>Not currently used</description>
        <label>Order Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this subscription has a parent subscription, this will point to it</description>
        <label>Parent Subscription</label>
        <referenceTo>ccrz__E_Subscription__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <description>The number of items shipped for this subscriptions</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPriceSubAmt__c</fullName>
        <description>Sub total for the recurring price.  This will be the amount used for installments.</description>
        <label>Recurring Price Sub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPrice__c</fullName>
        <description>Individual unit price for the installment.</description>
        <label>Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTInstallmentCount__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Installment Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTInstallmentFrequencyUOM__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Installment Frequency UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTInstallmentFrequency__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Installment Frequency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTOrderCount__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Order Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTOrderFrequencyUOM__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Order Frequency UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTOrderFrequency__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Order Frequency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTRecurringPricePercentage__c</fullName>
        <description>Recurring Price Percentage Field from the original SubProdTerm</description>
        <label>SPT Recurring Price Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTUpfrontPricePercentage__c</fullName>
        <description>Upfront Price Percentage Field from the original SubProdTerm</description>
        <label>SPT Upfront Price Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The sub prod term this subscription was ordered from</description>
        <label>SPT</label>
        <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Used for modifiers to determine order in which they are processed.</description>
        <label>Sequence</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__StoredPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The stored payment method for this subscription.</description>
        <label>Stored Payment</label>
        <referenceTo>ccrz__E_StoredPayment__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The storefront to which this subscription belongs.</description>
        <label>Storefront</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubscriptionId__c</fullName>
        <description>The external id of the subscription.  Not functionally used by B2B Commerce but may be used when creating objects within B2B Commerce.</description>
        <externalId>true</externalId>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__SubscriptionProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product that this subscription is for.  When recurring orders are used this is the product that will be ordered.</description>
        <label>Subscription Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SubscriptionStartDate__c</fullName>
        <description>The start date of the subscription</description>
        <label>Subscription Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__SubscriptionStatus__c</fullName>
        <description>The status of the subscription</description>
        <label>Subscription Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User associated with the subscription</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Subscription</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__SubscriptionProduct__c</columns>
        <columns>ccrz__OrderLastDate__c</columns>
        <columns>OSM_Subscription_End_Date__c</columns>
        <columns>ccrz__SubscriptionStartDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__SubscriptionStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SB-{0000000000}</displayFormat>
        <label>CC Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Subscription_End_Date_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>!ISBLANK(OSM_Subscription_End_Date__c)  &amp;&amp;   !ISNULL(OSM_Subscription_End_Date__c) &amp;&amp; ISCHANGED(OSM_Subscription_End_Date__c) &amp;&amp;  PRIORVALUE(OSM_Subscription_End_Date__c) != OSM_Subscription_End_Date__c &amp;&amp;  $Profile.Name !=&apos;System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;OSM_IT_Support_Admin&apos; &amp;&amp; $Profile.Name !=&apos;DevOpsAdmin&apos; &amp;&amp; ccrz__SubscriptionStatus__c!=&apos;Renew&apos; &amp;&amp; NOT($Permission.OSM_Sales_Adm_Permission) &amp;&amp;
NOT(OSM_Free_Trial__c)</errorConditionFormula>
        <errorMessage>You do not have permission to edit Subscription End Date field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscription_Sequence_Field_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(ccrz__Sequence__c)  &amp;&amp;   !ISNULL(ccrz__Sequence__c) &amp;&amp; ISCHANGED(ccrz__Sequence__c) &amp;&amp;  PRIORVALUE(ccrz__Sequence__c) != ccrz__Sequence__c &amp;&amp;  $Profile.Name !=&apos;System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;OSM_IT_Support_Admin&apos; &amp;&amp; $Profile.Name !=&apos;DevOpsAdmin&apos;</errorConditionFormula>
        <errorMessage>You do not have permission to edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscription_Start_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(ccrz__SubscriptionStartDate__c)  &amp;&amp;   !ISNULL(ccrz__SubscriptionStartDate__c) &amp;&amp; ISCHANGED(ccrz__SubscriptionStartDate__c) &amp;&amp;  PRIORVALUE(ccrz__SubscriptionStartDate__c) != ccrz__SubscriptionStartDate__c &amp;&amp;  $Profile.Name !=&apos;System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;OSM_IT_Support_Admin&apos; &amp;&amp; $Profile.Name !=&apos;DevOpsAdmin&apos; &amp;&amp; ccrz__SubscriptionStatus__c!=&apos;Renew&apos;</errorConditionFormula>
        <errorMessage>You do not have permission to edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscription_Status_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(ccrz__SubscriptionStatus__c) &amp;&amp; !ISNULL(ccrz__SubscriptionStatus__c) &amp;&amp; ISCHANGED(ccrz__SubscriptionStatus__c) &amp;&amp; PRIORVALUE(ccrz__SubscriptionStatus__c) != ccrz__SubscriptionStatus__c &amp;&amp; $Profile.Name !=&apos;System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;OSM_IT_Support_Admin&apos; &amp;&amp; $Profile.Name !=&apos;DevOpsAdmin&apos; &amp;&amp; ccrz__SubscriptionStatus__c!=&apos;Cancelled&apos; &amp;&amp; 
ccrz__SubscriptionStatus__c!=&apos;Renew&apos; &amp;&amp;
ccrz__SubscriptionStatus__c!=&apos;Expired&apos; &amp;&amp; 
NOT($Permission.OSM_Custom_Permission)</errorConditionFormula>
        <errorMessage>You do not have permission to edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscription_Storefront_Field_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(ccrz__Storefront__c)  &amp;&amp;   !ISNULL(ccrz__Storefront__c) &amp;&amp; ISCHANGED(ccrz__Storefront__c) &amp;&amp;  PRIORVALUE(ccrz__Storefront__c) != ccrz__Storefront__c &amp;&amp;  $Profile.Name !=&apos;System Administrator&apos; &amp;&amp; $Profile.Name !=&apos;OSM_IT_Support_Admin&apos; &amp;&amp; $Profile.Name !=&apos;DevOpsAdmin&apos;</errorConditionFormula>
        <errorMessage>You do not have permission to edit this field</errorMessage>
    </validationRules>
</CustomObject>